--- a/nhenry/src/main/resources/nyonyo589/finalproject/issue-goods.fxml
+++ b/nhenry/src/main/resources/nyonyo589/finalproject/issue-goods.fxml
@@ -1,20 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.text.Font?>
-<Pane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="200" prefWidth="150"
-            fx:controller="nyonyo589.finalproject.issueGoodsController">
-    <children>
-        <Label layoutX="38.0" layoutY="83.0" text="issue goods" />
-    </children>
-
-</Pane>
+<Pane prefHeight="200" prefWidth="150" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nyonyo589.finalproject.issueGoodsController" />
