--- a/nhenry/src/main/resources/nyonyo589/finalproject/welcome.fxml
+++ b/nhenry/src/main/resources/nyonyo589/finalproject/welcome.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
@@ -27,9 +28,9 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <VBox layoutX="30.0" layoutY="92.0" spacing="20.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="80.0">
+            <VBox layoutY="97.0" spacing="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="19.0" AnchorPane.topAnchor="97.0">
                <children>
-                  <Button fx:id="dashboardButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#dashboardButtonOnAction" prefWidth="190.0" style="-fx-background-color: #140620;" text="Dashboard" textFill="WHITE">
+                  <Button fx:id="dashboardButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#dashboardButtonOnAction" prefWidth="190.0" styleClass="navbuttons" text="Dashboard" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -47,7 +48,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="viewaddgoodsButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#viewaddgoodsButtonOnAction" prefWidth="190.0" style="-fx-background-color: #140620;" text="View/Add Goods" textFill="WHITE">
+                  <Button fx:id="viewaddgoodsButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#viewaddgoodsButtonOnAction" prefWidth="190.0" styleClass="navbuttons" text="View/Add Goods" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -65,7 +66,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="viewvendorsButton" alignment="CENTER" contentDisplay="TOP" layoutX="15.0" layoutY="116.0" mnemonicParsing="false" onAction="#viewvendorsButtonOnAction" prefWidth="190.0" style="-fx-background-color: #140620;" text="View Vendors" textFill="WHITE">
+                  <Button fx:id="viewvendorsButton" alignment="CENTER" contentDisplay="TOP" layoutX="15.0" layoutY="116.0" mnemonicParsing="false" onAction="#viewvendorsButtonOnAction" prefWidth="190.0" styleClass="navbuttons" text="View Vendors" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -83,7 +84,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="viewissuegoodsButton" alignment="CENTER" contentDisplay="TOP" layoutX="15.0" layoutY="217.0" mnemonicParsing="false" onAction="#viewissuegoodsButtonOnAction" prefWidth="190.0" style="-fx-background-color: #140620;" text="View/Issue Goods" textFill="WHITE">
+                  <Button fx:id="viewissuegoodsButton" alignment="CENTER" contentDisplay="TOP" layoutX="15.0" layoutY="217.0" mnemonicParsing="false" onAction="#viewissuegoodsButtonOnAction" prefWidth="190.0" styleClass="navbuttons" text="View/Issue Goods" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -103,7 +104,7 @@
                   </Button>
                </children>
                <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets bottom="5.0" right="5.0" top="5.0" />
                </padding>
             </VBox>
             <Button fx:id="signoutButton" layoutX="12.0" layoutY="544.0" mnemonicParsing="false" onAction="#signoutButtonOnAction" prefHeight="25.0" prefWidth="190.0" style="-fx-background-color: #9a1d5f;" styleClass="buttons" text="Sign-out" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0">
@@ -124,4 +125,7 @@
       <StackPane fx:id="stackPaneView" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #bcb9c7;" BorderPane.alignment="CENTER" />
    </center>
 
+   <stylesheets>
+      <URL value="@welcome.css" />
+   </stylesheets>
 </BorderPane>
