--- a/nhenry/src/main/resources/nyonyo589/finalproject/add-goods.fxml
+++ b/nhenry/src/main/resources/nyonyo589/finalproject/add-goods.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
@@ -10,13 +11,41 @@
    <children>
       <TableView fx:id="addgoodsTableView" layoutX="6.0" layoutY="292.0" prefHeight="325.0" prefWidth="854.0" style="-fx-background-color: #bcb9b7;" tableMenuButtonVisible="true">
         <columns>
-          <TableColumn fx:id="idTableColumn" maxWidth="50.0" minWidth="25.0" prefWidth="33.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="ID" />
-          <TableColumn fx:id="goodnameTableColumn" maxWidth="209.0" minWidth="45.0" prefWidth="165.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Good Name" />
-            <TableColumn fx:id="categoryTableColumn" maxWidth="275.0" minWidth="97.0" prefWidth="168.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Category" />
-            <TableColumn fx:id="sellingpriceTableColumn" maxWidth="220.0" minWidth="20.0" prefWidth="81.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Selling Price" />
-            <TableColumn fx:id="buyingpriceTableColumn" maxWidth="258.0" minWidth="20.0" prefWidth="250.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Buying Price" />
-            <TableColumn fx:id="quantityTableColumn" prefWidth="82.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Quantity" />
-            <TableColumn fx:id="dateTableColumn" prefWidth="242.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Date " />
+          <TableColumn fx:id="idTableColumn" maxWidth="50.0" minWidth="25.0" prefWidth="33.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="ID">
+             <cellValueFactory>
+                <PropertyValueFactory property="id" />
+             </cellValueFactory>
+          </TableColumn>
+          <TableColumn fx:id="goodnameTableColumn" maxWidth="209.0" minWidth="45.0" prefWidth="165.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Good Name">
+             <cellValueFactory>
+                <PropertyValueFactory property="goodsname" />
+             </cellValueFactory>
+          </TableColumn>
+            <TableColumn fx:id="categoryTableColumn" maxWidth="275.0" minWidth="97.0" prefWidth="168.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Category">
+               <cellValueFactory>
+                  <PropertyValueFactory property="category" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="sellingpriceTableColumn" maxWidth="220.0" minWidth="20.0" prefWidth="81.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Selling Price">
+               <cellValueFactory>
+                  <PropertyValueFactory property="sellingPrice" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="buyingpriceTableColumn" maxWidth="258.0" minWidth="20.0" prefWidth="250.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Buying Price">
+               <cellValueFactory>
+                  <PropertyValueFactory property="buyingprice" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="quantityTableColumn" prefWidth="82.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Quantity">
+               <cellValueFactory>
+                  <PropertyValueFactory property="quantity" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="dateTableColumn" prefWidth="242.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="Date ">
+               <cellValueFactory>
+                  <PropertyValueFactory property="date" />
+               </cellValueFactory>
+            </TableColumn>
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -80,7 +109,8 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Label fx:id="messageLabel" alignment="CENTER" layoutX="14.0" layoutY="238.0" prefHeight="17.0" prefWidth="351.0" textFill="#e10b0b" />
+      <Label fx:id="messageLabel" alignment="CENTER" layoutX="258.0" layoutY="252.0" prefHeight="17.0" prefWidth="351.0" textFill="#e10b0b" />
+      <Button fx:id="retrieveButton" layoutX="544.0" layoutY="119.0" mnemonicParsing="false" onAction="#retrieveButtonOnAction" text="retrieve" />
    </children>
    <padding>
       <Insets bottom="10.0" />
