--- a/nhenry/src/main/resources/nyonyo589/finalproject/add-goods.fxml
+++ b/nhenry/src/main/resources/nyonyo589/finalproject/add-goods.fxml
@@ -9,7 +9,7 @@
 
 <Pane prefWidth="865.0" style="-fx-background-color: #bcb9c7;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nyonyo589.finalproject.AddGoodsController">
    <children>
-      <TableView fx:id="addgoodsTableView" layoutX="6.0" layoutY="292.0" prefHeight="325.0" prefWidth="854.0" style="-fx-background-color: #bcb9b7;" tableMenuButtonVisible="true">
+      <TableView fx:id="addgoodsTableView" layoutX="6.0" layoutY="252.0" prefHeight="325.0" prefWidth="854.0" style="-fx-background-color: #bcb9b7;" tableMenuButtonVisible="true">
         <columns>
           <TableColumn fx:id="idTableColumn" maxWidth="50.0" minWidth="25.0" prefWidth="33.0" style="-fx-background-color: #bcb2eb; -fx-border: solid; -fx-border-width: 1px; -fx-border-color: black;" text="ID">
              <cellValueFactory>
@@ -57,7 +57,7 @@
                <font>
                   <Font name="Comic Sans MS Italic" size="11.0" />
                </font></Label>
-            <ChoiceBox fx:id="categoryChoiceBox" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border: solid; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;">
+            <ChoiceBox fx:id="categoryChoiceBox" onAction="#categoryChoiceBoxOnAction" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border: solid; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -71,7 +71,7 @@
                   <Font name="Comic Sans MS Italic" size="11.0" />
                </font>
             </Label>
-            <TextField fx:id="goodnameTextField" style="-fx-background-color: transparent; -fx-border: solid; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;" />
+            <ChoiceBox fx:id="goodsNameChoiceBox" prefWidth="150.0" />
          </children>
       </VBox>
       <VBox layoutX="14.0" layoutY="111.0">
@@ -108,9 +108,40 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <Label fx:id="messageLabel" alignment="CENTER" layoutX="258.0" layoutY="252.0" prefHeight="17.0" prefWidth="351.0" textFill="#e10b0b" />
-      <Button fx:id="retrieveButton" layoutX="544.0" layoutY="119.0" mnemonicParsing="false" onAction="#retrieveButtonOnAction" text="retrieve" />
+      <Label alignment="CENTER" layoutX="243.0" layoutY="14.0" prefHeight="0.0" prefWidth="380.0" text="PRODUCTS " textAlignment="CENTER" textFill="#140640">
+         <font>
+            <Font name="Comic Sans MS Bold" size="18.0" />
+         </font></Label>
+      <HBox alignment="CENTER" layoutX="72.0" layoutY="588.0" spacing="20.0">
+         <children>
+            <HBox alignment="CENTER" spacing="5.0">
+               <children>
+                  <Label text="TOTAL SELLING PRICE:" />
+                  <TextField fx:id="totalSellingPriceTextView" editable="false" prefWidth="100.0">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></TextField>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" spacing="5.0">
+               <children>
+                  <Label text="TOTAL BUYING PRICE:" />
+                  <TextField fx:id="totalBuyingPriceTextField" editable="false" prefWidth="100.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" spacing="5.0">
+               <children>
+                  <Label alignment="CENTER" text="OVERALL QUANTITY:" />
+                  <TextField fx:id="overallQuantityTextField" alignment="CENTER" editable="false" prefWidth="100.0" />
+               </children>
+            </HBox>
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="10.0" />
